Patchwork/tests/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: monitoring
  namespace: prod-monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1    
spec:
  rules:
  - host: test.com
    http:
      paths:
      - path: /prometheus/(.*)
        backend:
          serviceName: prometheus
          servicePort: 80
      - path: /alertmanager/(.*)
        backend:
          serviceName: alertmanager
          servicePort: 80
